Implementando rotas CRUD

--- a/fastapi_zero/pyproject.toml
+++ b/fastapi_zero/pyproject.toml
@@ -23,7 +23,7 @@ pytest-cov = "^6.1.1"
 taskipy = "^1.14.1"
 
 [tool.ruff]
-line-length = 79
+line-length = 85
 extend-exclude = ['migrations']
 
 [tool.ruff.lint]
@@ -44,6 +44,6 @@ pre_format = 'ruff check --fix'
 format = 'ruff format'
 run = 'fastapi dev fastapi_zero/app.py'
 pre_test = 'task lint'
-test = 'pytest -s -x -cov=fastapi_zero -vv'
+test = 'pytest -s -x --cov=fastapi_zero -vv'
 post_test = 'coverage html'
 
